Replace Unsplash images with local metal photos for metal3dprint.org

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     <main>
         <section class="page-hero">
             <div class="page-hero-bg">
-                <img src="https://images.unsplash.com/photo-1542621334-a254cf47733d?w=600&q=80" alt="About Metal3d Print" loading="lazy">
+                <img src="images/19-wire-arc-additive.png" alt="About Metal3d Print" loading="lazy">
                 <div class="page-hero-overlay"></div>
             </div>
             <div class="page-hero-content">
@@ -56,7 +56,7 @@
             <div class="container-wide">
                 <div class="story-grid">
                     <div class="story-image animate-in">
-                        <img src="https://images.unsplash.com/photo-1706437524158-6ca925ce5a06?w=600&q=80" alt="Our Story" loading="lazy">
+                        <img src="images/09-watch-case.png" alt="Our Story" loading="lazy">
                     </div>
                     <div class="story-content animate-in">
                         <span class="section-label">OUR STORY</span>
@@ -144,7 +144,7 @@
                 <a href="contact.html" class="btn btn-large">Get In Touch</a>
             </div>
             <div class="cta-background">
-                <img src="https://images.unsplash.com/photo-1609867271967-a82f85c48531?w=600&q=80" alt="Metal3d Print" loading="lazy">
+                <img src="images/05-tradeshow-display.png" alt="Metal3d Print" loading="lazy">
             </div>
         </section>
     </main>
