--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
     <main>
         <section class="page-hero">
             <div class="page-hero-bg">
-                <img src="https://images.unsplash.com/photo-1542621334-a254cf47733d?w=600&q=80" alt="Metal3d Print Services" loading="lazy">
+                <img src="images/19-wire-arc-additive.png" alt="Metal3d Print Services" loading="lazy">
                 <div class="page-hero-overlay"></div>
             </div>
             <div class="page-hero-content">
